@@ -11,7 +11,6 @@ import net.minecraft.client.gui.components.EditBox;
 
 import net.mcreator.onepiece.entity.DenDenMushiEntity;
 
-import java.util.stream.Collectors;
 import java.util.List;
 import java.util.HashMap;
 import java.util.Comparator;
@@ -22,11 +21,11 @@ public class SnailMenuThisGUIIsClosedProcedure {
 			return;
 		{
 			final Vec3 _center = new Vec3(x, y, z);
-			List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(200 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center))).collect(Collectors.toList());
+			List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(500 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center))).toList();
 			for (Entity entityiterator : _entfound) {
 				if (entityiterator instanceof DenDenMushiEntity) {
 					if ((entityiterator.getPersistentData().getString("number")).equals(guistate.containsKey("text:recievernumber") ? ((EditBox) guistate.get("text:recievernumber")).getValue() : "")) {
-						if (entityiterator instanceof LivingEntity _entity && !_entity.level.isClientSide())
+						if (entityiterator instanceof LivingEntity _entity && !_entity.level().isClientSide())
 							_entity.addEffect(new MobEffectInstance(MobEffects.GLOWING, 300, 1, false, false));
 						entityiterator.getPersistentData().putDouble("type", 0);
 						entityiterator.getPersistentData().putDouble("typecounter", 0);
